--- a/nginx/conf/kevin-messiaen.fr.conf
+++ b/nginx/conf/kevin-messiaen.fr.conf
@@ -24,6 +24,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
 
     location / {
-    	# ...
+        root /usr/share/nginx/html;
+    	try_files $uri $uri/ =404;
     }
 }
