--- a/nginx/conf/kevin-messiaen.fr.conf
+++ b/nginx/conf/kevin-messiaen.fr.conf
@@ -20,8 +20,8 @@ server {
 
     server_name www.kevin-messiaen.fr;
 
-    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/www.kevin-messiaen.fr/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/www.kevin-messiaen.fr/privkey.pem;
 
     location / {
         root /usr/share/nginx/html;
